--- a/_includes/base/footer.html
+++ b/_includes/base/footer.html
@@ -38,6 +38,9 @@
         <a href="https://twitter.com/inventreedb" alt="Twitter" class="ml-3 cm-gray-3">
           <img class="h-5 w-5" alt="Twitter logo" src="{{ '/assets/twitter.svg' | relative_url }}" />
         </a>
+        <a href="https://chaos.social/@InvenTree" rel=me alt="Mastodon" class="ml-3 cm-gray-3">
+          <img class="h-5 w-5" alt="Mastodon logo" src="{{ '/assets/mastodon.svg' | relative_url }}" />
+        </a>
       </span>
     </div>
   </div>
